Boolean operation generates additional edges #75827

Closed
opened 2020-04-17 13:57:03 +02:00 by Iakov Kuleshov · 8 comments

System Information
Operating system: Windows 7-64
Graphics card: NVidia GeForce GTX 1050Ti

Blender Version
Broken: Blender 2.79b f4dc9f9d68, Blender 2.79 e045fe53f1b0, Blender 2.82a, Blender 2.83 beta 8cb10c124e

Short description of error
Blender generates additional edges during boolean operation "difference"
boolean-bug.png

Exact steps for others to reproduce the error

**System Information** Operating system: Windows 7-64 Graphics card: NVidia GeForce GTX 1050Ti **Blender Version** Broken: Blender 2.79b f4dc9f9d68b, Blender 2.79 e045fe53f1b0, Blender 2.82a, Blender 2.83 beta 8cb10c124efe **Short description of error** Blender generates additional edges during boolean operation "difference" ![boolean-bug.png](https://archive.blender.org/developer/F8478665/boolean-bug.png) **Exact steps for others to reproduce the error** - Open attached file [boolean-bug.blend](https://archive.blender.org/developer/F8478661/boolean-bug.blend)
Author

Added subscriber: @IakovKuleshov

Added subscriber: @IakovKuleshov
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

#54024 (BMesh boolean fails when edge is co-planar to face (under some circumstances))

#54024 (BMesh boolean fails when edge is co-planar to face (under some circumstances))

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the simple file.
This bug deserves an investigation.

Thanks for the simple file. This bug deserves an investigation.
Germano Cavalcante changed title from Blender generates additional edges during boolean operation to Boolean operation generates additional edges 2020-04-21 11:55:57 +02:00
Howard Trickey self-assigned this 2020-09-04 16:08:36 +02:00

This issue was referenced by 5faf72bb71

This issue was referenced by 5faf72bb719b075e8ef4bf4371cc13c35557eba9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75827
No description provided.